[build-system]
requires = ["setuptools>=71.0"]
build-backend = "setuptools.build_meta"


[project]
name = "letsdo"
version = "0.0.1"
authors = [
  { name="Carlo Lobrano", email="c.lobrano@gmail.com" },
]
description = "Time tracker for Command Line"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/clobrano/letsdo"
Issues = "https://github.com/clobrano/letsdo/issues"
