[build-system]
requires = ["setuptools>=71.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/letsdo/__version__.py"


[project]
name = "letsdo"
authors = [
  { name="Carlo Lobrano", email="c.lobrano@gmail.com" },
]
description = "Time tracker for Command Line"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "Operating System :: OS Independent"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/clobrano/letsdo"
Issues = "https://github.com/clobrano/letsdo/issues"


