[build-system]
requires = ["setuptools>=71.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/__version__.py"


[project]
name = "letsdo"
authors = [
  { name="Carlo Lobrano", email="c.lobrano@gmail.com" },
]
description = "Time tracker for Command Line"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "docopt",
    "PyYaml",
    "terminaltables",
    "parsedatetime",
    "raffaello"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dynamic = ["version"]

[project.scripts]
lets = "cli:main"

[project.urls]
Homepage = "https://github.com/clobrano/letsdo"
Issues = "https://github.com/clobrano/letsdo/issues"


