[metadata]
name = letsdo
description = Time tracker for Command Line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clobrano/letsdo
author = Carlo Lobrano
author_email = c.lobrano@gmail.com
license = GPL3
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
keywords = productivity, GTD, time tracker

[options]
package_dir =
    = src
packages = find:
install_requires =
    docopt
    PyYaml
    terminaltables
    parsedatetime
    raffaello
include_package_data = True
py_modules =
    app
    cli
    configuration
    handlers
    log
    tasks
    timetoolkit

[options.extras_require]
dev =
    pytest>=7.0
    twine>=4.0.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lets=cli:main

[tool:pytest]
addopts = -v

[tool.setuptools_scm]
write_to = src/letsdo/_version.py

